[package]
name = "histeq"
version = "0.1.0"
edition = "2021"


[dependencies]
ndarray = "*"
ndarray-stats = "*"
png = "*"
itertools = "*"
image = "0.24"
num-traits = { version = "*", features = ["std"] }
byteorder = "*"
plotters = "*"
clap = { version = "4", features = ["derive"] }
smart_denoise = { path = "../smart_denoise", optional = true }

[features]
default = []
denoise = ["smart_denoise"]